--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -28,6 +28,11 @@
     margin-top: 50px;
   }
 
+ #expe-head{
+  margin-left: 10px;
+ }
+
+
   .j_title{
     width: 100%;
     font-size: 0.8rem;
